<resources>
    <string name="app_name">MyCar</string>
    <string name="detail_car">Details Car</string>
    <string name="information_car">Car data implementation</string>
    <string name="name_model">Model*</string>
    <string name="brand">Brand*</string>
    <string name="power_kw">Power(kW)*</string>
    <string name="kw">kW</string>
    <string name="number_of_doors">Number of doors*</string>
    <string name="production_year">Production year*</string>
    <string name="fuel">Fuel*</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete the car?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_fragment_title">Edit Car</string>
    <string name="add_car">Add Car</string>
    <string name="import_image">Import image</string>
    <string name="second_fuel">Second fuel(Optional)</string>

    <string name="choose_car">Choose the brand of your car</string>
    <string name="Ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="color_car">Color car*</string>
    <string name="seat_car">Seat car*</string>
    <string name="search_car">Choose yours car</string>
    <string name="kilometres">Kilometres*</string>
    <string name="share_car">Hi, look at my car located in MyCar app</string>
    <string name="car">My car:</string>
    <string name="share">Share car</string>
    <string name="sharing_not_available">Sharing Not Available</string>

    <string name="channel_name">car_channel</string>
    <string name="channel_description">car_reminder</string>
    <string name="type_fuel">Choose your fuel</string>
    <string name="labels_blank">Warning! Required fields are blank.</string>

    <string name="blank_brand">Blank brand field!</string>
    <string name="blank_model">Blank model field!</string>
    <string name="blank_power">Blank power field!</string>
    <string name="blank_door">Blank doors field!</string>
    <string name="blank_fuel">Blank fuel field!</string>
    <string name="blank_year">Blank year field!</string>
    <string name="blank_places">Blank places field!</string>
    <string name="blank_color">Blank color field!</string>
    <string name="blank_km">Blank kM field!</string>

    <string name="error_snackbar">Error Snackbar, the fields are full</string>
    <string name="retry_again">Retry Again</string>
    <string name="error_message">No internet connection.</string>

    <string name="error_power">The power must be between 1kW and 9999 kW.</string>
    <string name="error_door">The number of ports should be between 1 and 9.</string>
    <string name="error_year">The year of production must be between 1800 and 2050.</string>
    <string name="error_seat">Car seats must be between 1 and 9.</string>

    <string name="no_brand">You have to add the brand to add the car.</string>
    <string name="no_model">You have to add the model to add the car.</string>
    <string name="no_fuel">You have to add the fuel to add the car.</string>
    <string name="no_color">You have to add the color to add the car.</string>

    <string name="type_color">Choose car color</string>

    <string name="default_km">Choose car Km</string>
    <string name="no_km">You have to add the Km to add the car.</string>
    <string name="github">GitHub</string>

    <string name="default_year">Choose car year</string>
    <string name="no_year">You have to add the year of production to add the car.</string>
    <string name="default_door">Choose the number of car doors</string>
    <string name="no_door">You have to add the door to add the car.</string>
    <string name="default_seat">Choose the number of car seat</string>
    <string name="no_seat">You have to add the seat to add the car.</string>
</resources>