<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:padding="16dp"
    tools:context=".ui.fragment.AddCarFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_car_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/name_model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_car_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brand_car_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/brand"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_car_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/brand_car_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/power_car_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:hint="@string/power_kw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brand_car_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/power_car_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/doors_car_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/number_of_doors"
        android:layout_marginTop="210dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_car_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doors_car_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/year_car_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/production_year"
        android:layout_marginTop="280dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doors_car_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/year_car_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fuel_car_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/fuel"
        android:layout_marginTop="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel_car_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="200dp"
        android:layout_height="157dp"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fuel_car_label">

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/fuel_car_label"
            app:layout_constraintStart_toStartOf="@+id/import_image"
            app:layout_constraintTop_toBottomOf="@+id/import_image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="347dp"
        android:layout_height="258dp"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fuel_car_label">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/import_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/delete"
            android:visibility="gone" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>