<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/carListFragment">

    <fragment
        android:id="@+id/carListFragment"
        android:name="com.example.mycar.ui.fragment.CarListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_car_list">
        <action
            android:id="@+id/action_carListFragment_to_carDetailFragment"
            app:destination="@id/carDetailFragment" />
        <action
            android:id="@+id/action_carListFragment_to_addCarFragment"
            app:destination="@id/addCarFragment" />
    </fragment>
    <fragment
        android:id="@+id/carDetailFragment"
        android:name="com.example.mycar.ui.fragment.CarDetailFragment"
        android:label="@string/detail_car"
        tools:layout="@layout/fragment_car_detail">
        <action
            android:id="@+id/action_carDetailFragment_to_addCarFragment"
            app:destination="@id/addCarFragment" />
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
    <fragment
        android:id="@+id/addCarFragment"
        android:name="com.example.mycar.ui.fragment.AddCarFragment"
        android:label="@string/information_car"
        tools:layout="@layout/fragment_add_car">
        <action
            android:id="@+id/action_addCarFragment_to_carListFragment"
            app:destination="@id/carListFragment" />
        <argument android:name="id"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
</navigation>