<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.CarDetailFragment">

        <ImageView
            android:id="@+id/image_car"
            android:layout_width="600dp"
            android:layout_height="250dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="44dp"
            android:cropToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/import_image" />

        <TextView
            android:id="@+id/name_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/nanum_gothic_bold"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_car"
            tools:text="Name car" />

        <ImageView
            android:id="@+id/ic_brand_car"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/brand"
            android:src="@drawable/ic_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_car" />

        <TextView
            android:id="@+id/brand_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/ic_brand_car"
            app:layout_constraintStart_toEndOf="@id/ic_brand_car"
            app:layout_constraintTop_toTopOf="@id/ic_brand_car"
            tools:text="Brand car" />

        <ImageView
            android:id="@+id/ic_places_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seat_car"
            android:src="@drawable/ic_places"
            app:layout_constraintBottom_toBottomOf="@+id/ic_brand_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/brand_car"
            app:layout_constraintTop_toTopOf="@+id/ic_brand_car" />

        <TextView
            android:id="@+id/places_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@+id/ic_places_car"
            app:layout_constraintStart_toEndOf="@+id/ic_places_car"
            app:layout_constraintTop_toTopOf="@+id/ic_places_car"
            tools:text="Places car" />

        <ImageView
            android:id="@+id/ic_power_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_flash"
            app:layout_constraintEnd_toEndOf="@+id/ic_brand_car"
            app:layout_constraintStart_toStartOf="@+id/ic_brand_car"
            app:layout_constraintTop_toBottomOf="@+id/ic_brand_car"
            android:contentDescription="@string/power_kw" />

        <TextView
            android:id="@+id/power_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/ic_power_car"
            app:layout_constraintStart_toEndOf="@id/ic_power_car"
            app:layout_constraintTop_toTopOf="@id/ic_power_car"
            tools:text="Power car" />

        <ImageView
            android:id="@+id/ic_color_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_color"
            app:layout_constraintEnd_toEndOf="@+id/ic_places_car"
            app:layout_constraintStart_toStartOf="@+id/ic_places_car"
            app:layout_constraintTop_toBottomOf="@+id/ic_places_car"
            android:contentDescription="@string/color_car" />

        <TextView
            android:id="@+id/color_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/ic_color_car"
            app:layout_constraintStart_toEndOf="@id/ic_color_car"
            app:layout_constraintTop_toTopOf="@id/ic_color_car"
            tools:text="Color" />

        <ImageView
            android:id="@+id/ic_door_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_door"
            app:layout_constraintEnd_toEndOf="@+id/ic_power_car"
            app:layout_constraintStart_toStartOf="@+id/ic_power_car"
            app:layout_constraintTop_toBottomOf="@+id/ic_power_car"
            android:contentDescription="@string/number_of_doors" />

        <TextView
            android:id="@+id/door_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/ic_door_car"
            app:layout_constraintStart_toEndOf="@id/ic_door_car"
            app:layout_constraintTop_toTopOf="@id/ic_door_car"
            tools:text="Number doors" />

        <ImageView
            android:id="@+id/ic_km_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_km"
            app:layout_constraintEnd_toEndOf="@+id/ic_color_car"
            app:layout_constraintStart_toStartOf="@+id/ic_color_car"
            app:layout_constraintTop_toBottomOf="@+id/ic_color_car"
            android:contentDescription="@string/kilometres" />

        <TextView
            android:id="@+id/km_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/ic_km_car"
            app:layout_constraintStart_toEndOf="@id/ic_km_car"
            app:layout_constraintTop_toTopOf="@id/ic_km_car"
            tools:text="Kilometres" />

        <ImageView
            android:id="@+id/ic_year_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintEnd_toEndOf="@+id/ic_door_car"
            app:layout_constraintStart_toStartOf="@+id/ic_door_car"
            app:layout_constraintTop_toBottomOf="@+id/ic_door_car"
            android:contentDescription="@string/production_year" />

        <TextView
            android:id="@+id/year_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/ic_year_car"
            app:layout_constraintStart_toEndOf="@id/ic_year_car"
            app:layout_constraintTop_toTopOf="@id/ic_year_car"
            tools:text="Year Production" />

        <ImageView
            android:id="@+id/ic_fuel_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_pump"
            app:layout_constraintEnd_toEndOf="@+id/ic_year_car"
            app:layout_constraintStart_toStartOf="@+id/ic_year_car"
            app:layout_constraintTop_toBottomOf="@+id/ic_year_car"
            android:contentDescription="@string/fuel" />

        <TextView
            android:id="@+id/fuel_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/ic_fuel_car"
            app:layout_constraintStart_toEndOf="@id/ic_fuel_car"
            app:layout_constraintTop_toTopOf="@id/ic_fuel_car"
            tools:text="Fuel" />

        <ImageView
            android:id="@+id/ic_second_fuel_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:src="@drawable/ic_second_pump"
            app:layout_constraintEnd_toEndOf="@+id/ic_fuel_car"
            app:layout_constraintStart_toStartOf="@+id/ic_fuel_car"
            app:layout_constraintTop_toBottomOf="@id/fuel_car"
            android:contentDescription="@string/second_fuel" />

        <TextView
            android:id="@+id/second_fuel_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/ic_second_fuel_car"
            app:layout_constraintStart_toEndOf="@id/ic_second_fuel_car"
            app:layout_constraintTop_toTopOf="@id/ic_second_fuel_car"
            tools:text="Second Fuel" />

        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/delete_car"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year_car" /> -->


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_car"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/detail_car"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/delete" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_car"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="88dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/information_car" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/detail_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/detail_car" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share_car"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/detail_car"
            android:contentDescription="@string/share" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>